# python-hunspell-aur

./: .SRCINFO  .nvchecker.toml  PKGBUILD  pyproject.toml
